added blog with notion as cms. very slow, needs fix

--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "axios": "^0.24.0",
     "next": "12.0.7",
     "next-themes": "^0.0.15",
+    "notion-client": "^4.13.0",
+    "notion-utils": "^4.12.0",
+    "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-notion": "^0.10.0",
+    "react-notion-x": "^4.13.1",
     "react-rough-notation": "^1.0.1",
     "rough-notation": "^0.5.1"
   },
